# petiglyph

./: .SRCINFO  .gitignore  AGENTS.md  CI.md  CONTRIBUTING.md  CROSS-COMPATIBILITY-GUIDE.md  Cargo.toml  DEPENDENCY_SUPPLY_CHAIN.md  LICENSE  OSS-SCAFFOLDING-REPORT.md  PKGBUILD  PLAN-ANIMATE.md  PLAN-VIDEO.md  PLAN.md  README.md  RELEASE-CHECKLIST.md  RELEASE-GUIDE.md  RELEASE.md  RELEASE_NOTES_TEMPLATE.md  SECURITY.md  TESTS.md  THIRD_PARTY_LICENSES.md  TODO-SCAF.md  TODO.md  deny.toml  glyphdemo  petiglyph.toml  pyproject.toml  release-notes.md  test_parse  test_parse.rs  test_ws  test_ws.rs
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  npm-publish.yml  pypi-publish.yml  release.yml
chtehcet/: petiglyph.toml
docs/: THIRD_PARTY_LICENSES.md  assets-provenance.md  dependency-supply-chain.md  release-notes-template.md
launch-quit-demo/: petiglyph.toml
npm/: petiglyph-README-intro.md
npm/petiglyph/: README.md  package.json
npm/petiglyph-darwin-arm64/: README.md  package.json
npm/petiglyph-darwin-x64/: README.md  package.json
npm/petiglyph-linux-arm64-gnu/: README.md  package.json
npm/petiglyph-linux-arm64-musl/: README.md  package.json
npm/petiglyph-linux-x64-gnu/: README.md  package.json
npm/petiglyph-linux-x64-musl/: README.md  package.json
npm/petiglyph-win32-arm64-msvc/: LICENSE  README.md  package.json
npm/petiglyph-win32-x64-msvc/: README.md  package.json
scripts/: aur.sh  ci_install_ffmpeg.sh  clean_local_residue.sh  clipboard_smoke.ps1  clipboard_smoke.sh  distribution-targets.json  distribution_matrix.py  generate_third_party_licenses.sh  gh_cache_delete.sh  pf.sh  preview_uninstall_spinner.py  release_all.sh  release_assert_clean_tree.sh  release_npm_pack_test.sh  release_npm_trust.sh  release_prepare_aur.sh  release_publish_aur.sh  release_stage_npm_artifacts.sh  release_sync_readmes.sh  release_sync_versions.sh  tui_e2e_hty.sh
scripts/lib/: pkg_meta.sh
src/: animation_media.rs  artifact_warning.rs  build.rs  cli.rs  compose.rs  doctor.rs  glyph_debug.rs  image_pipeline.rs  install.rs  main.rs  project.rs  tests.rs  tui.rs  tui_app_core.rs  tui_app_tasks.rs  tui_debug.rs  tui_events.rs  tui_glyph_keys.rs  tui_glyph_model.rs  tui_glyph_render.rs  tui_home_workflow.rs  tui_imports.rs  tui_input_support.rs  tui_installed_fonts.rs  tui_render_helpers.rs  tui_render_shell.rs  tui_render_workflows.rs  tui_session.rs  tui_tests_core.rs  tui_tests_imports.rs  tui_tests_workflow.rs  tui_welcome_render.rs
test-assets/: MANIFEST.txt  README.md
test-assets/images/: diamond-128.avif  ring-128.avif  triangle-128.avif
test-assets/videos/: diamond-rotate.mkv  diamond-rotate.webm  ring-rotate.mkv  ring-rotate.mov  (+4 more)
test-font/: petiglyph.toml
test-project/: petiglyph.toml
test1/: petiglyph.toml
test2/: petiglyph.toml
tests/: cli_contract.rs  tui_e2e.rs
