[package]
name = "petiglyph"
version = "0.0.1"
edition = "2024"
description = "TUI-first Rust CLI for turning image folders into monochrome glyph fonts."
license = "MIT"
repository = "https://github.com/petipoua/petiglyph"
readme = "README.md"
keywords = ["font", "glyph", "icons", "tui", "cli"]
categories = ["command-line-utilities", "graphics"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["avif", "bmp", "gif", "jpeg", "png", "webp"] }
ratatui = "0.29"
resvg = "0.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
ttf-parser = "0.25"
