[package]
name = "petiglyph"
version = "0.1.4"
edition = "2024"
rust-version = "1.88"
description = "petiglyph is a TUI and CLI tool for turning images and videos into custom font glyphs"
license = "MIT"
repository = "https://github.com/petipoua/petiglyph"
readme = "README.md"
keywords = ["font", "glyph", "icons", "tui", "cli"]
categories = ["command-line-utilities", "graphics"]
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/tests/cli_contract.rs",
    "/test-assets/images/diamond-128.svg",
    "/test-assets/images/diamond-128.png",
    "/test-assets/images/ring-128.png",
    "/test-assets/images/triangle-128.png",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
ratatui = "0.30"
resvg = "0.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tui-input = "0.15"
ttf-parser = "0.25"
uuid = { version = "1.18", features = ["v4"] }
walkdir = "2.5"
tempfile = "3.20"
